@@ -1,73 +1,0 @@
-/* jCAE stand for Java Computer Aided Engineering. Features are : Small CAD
-   modeler, Finite element mesher, Plugin architecture.
-
-    Copyright (C) 2004,2005, by EADS CRC
-
-    This library is free software; you can redistribute it and/or
-    modify it under the terms of the GNU Lesser General Public
-    License as published by the Free Software Foundation; either
-    version 2.1 of the License, or (at your option) any later version.
-
-    This library is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-    Lesser General Public License for more details.
-
-    You should have received a copy of the GNU Lesser General Public
-    License along with this library; if not, write to the Free Software
-    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA */
-
-package org.jcae.mesh.amibe.ds;
-
-/**
- * Unique edges, without considering their orientation.
- */
-public class NotOrientedEdge extends VirtualHalfEdge
-{
-	public NotOrientedEdge()
-	{
-		super();
-	}
-	
-	/**
-	 * Copy a VirtualHalfEdge into a new NotOrientedEdge instance.
-	 *
-	 * @param ot  source VirtualHalfEdge.
-	 */
-	public NotOrientedEdge(VirtualHalfEdge ot)
-	{
-		tri = ot.tri;
-		localNumber = ot.localNumber;
-		attributes = tri.getEdgeAttributes(localNumber);
-	}
-
-	/**
-	 * Return the hash code value of this object.  This hash code value is
-	 * the sum of the hash code values of the two adjacent triangles.
-	 */
-	public final int hashCode()
-	{
-		Triangle sym = (Triangle) tri.getAdj(localNumber);
-		int h = tri.hashCode() + sym.hashCode();
-		return h;
-	}
-	
-	/**
-	 * Test whether two objects are equal.
-	 */
-	public final boolean equals(Object o)
-	{
-		if (o == null)
-			return false;
-		if (!(o instanceof NotOrientedEdge))
-			return false;
-		NotOrientedEdge that = (NotOrientedEdge) o;
-		return (that.tri == tri && that.localNumber == localNumber) ||
-		       (that.tri == (Triangle) tri.getAdj(localNumber) && that.localNumber == tri.getAdjLocalNumber(localNumber));
-	}
-	
-	public final String toString()
-	{
-		return "Edge hashCode="+hashCode()+"\n"+super.toString();
-	}
-}
