@@ -1,3 +1,8 @@
+Thu Jul 26 02:19:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/NotOrientedEdge.java: Remove obsolete
+	class.
+
 Mon Jul 23 20:08:36 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/cad/CADShapeBuilder.java: Add types to
